--- a/tennisfy/pubspec.yaml
+++ b/tennisfy/pubspec.yaml
@@ -34,6 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.10.0
+  firebase_auth: ^3.4.2
+  firebase_core_platform_interface: 4.5.1
+  cloud_firestore: ^3.5.1
+  firebase_storage: any
+  email_validator: ^2.0.1
+  path_provider: any
+  image_picker: any
 
 
 dev_dependencies:
@@ -60,8 +68,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/tennis_court.png
+    - assets/images/tennis_court.jpg
     - assets/images/logo.png
+    - assets/images/profileImagePlaceHolder.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
