--- a/tennisfy/pubspec.yaml
+++ b/tennisfy/pubspec.yaml
@@ -71,6 +71,7 @@ flutter:
     - assets/images/tennis_court.jpg
     - assets/images/logo.png
     - assets/images/profileImagePlaceHolder.png
+    - assets/images/tennis_serve_cartoon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
