--- a/tennisfy/pubspec.yaml
+++ b/tennisfy/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   email_validator: ^2.0.1
   path_provider: any
   image_picker: any
+  google_nav_bar: ^5.0.6
 
 
 dev_dependencies:
