--- a/tennisfy/pubspec.yaml
+++ b/tennisfy/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   path_provider: any
   image_picker: any
   google_nav_bar: ^5.0.6
+  syncfusion_flutter_charts: ^20.1.55
+  syncfusion_flutter_core: ^20.1.55
+  
 
 
 dev_dependencies:
@@ -75,6 +78,7 @@ flutter:
     - assets/images/tennis_serve_cartoon.png
     - assets/images/tennis_reciever_cartoon.png
     - assets/images/tennis_net_cartoon.png
+    - assets/images/waiting_cartoon.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
